# WhisperX-easy-subtitle

./: .gitignore  README.md  main.py  pyproject.toml
