[project]
name = "WhisperX-easy-subtitle"
version = "0.1.0"
description = "An easy WhisperX implement mainly for n8n automation workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "whisperx>=3.7.4",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
